objects/MktgCloudAPISettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the configuration values to call Mktg Cloud API</description>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>Client Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAPIAccessToken__c</fullName>
        <label>MC API Access Token</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktgAuthURL__c</fullName>
        <label>Mktg Auth URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCreationDate__c</fullName>
        <label>Token Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TokenDuration__c</fullName>
        <label>Token Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mktg Cloud API Settings</label>
</CustomObject>